After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710228 - gst-rtsp-server: fix test-video compilation when WITH_AUTH is defined
gst-rtsp-server: fix test-video compilation when WITH_AUTH is defined
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-15 23:43 UTC by Aleix Conchillo Flaqué
Modified: 2014-02-25 22:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
just a compilation fix (2.72 KB, patch)
2013-10-15 23:43 UTC, Aleix Conchillo Flaqué
committed Details | Review

Description Aleix Conchillo Flaqué 2013-10-15 23:43:05 UTC
Created attachment 257395 [details] [review]
just a compilation fix

The example source code in examples/test-video.c does not compile if WITH_AUTH is defined.

The attached patch fixes it.
Comment 1 Sebastian Dröge (slomo) 2013-10-30 18:12:27 UTC
commit fcad523dd7c4115668de6993e139e7da852364e7
Author: Aleix Conchillo Flaque <aleix@oblong.com>
Date:   Tue Oct 15 16:37:34 2013 -0700

    examples: fix compilation when WITH_AUTH is defined
    
    https://bugzilla.gnome.org/show_bug.cgi?id=710228