examples: fix compilation when WITH_AUTH is defined

https://bugzilla.gnome.org/show_bug.cgi?id=710228